integ-tests/tests/snapshots/parser__datetimes__utc.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ utc:1:7
  │
1 │ utc = 2016-09-09T09:09:09Z
  │       ^^^^^^^^^^^^^ unable to parse number


